--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,15 +1,15 @@
 phase: 1
-checkpoint: 2
+checkpoint: 3
 status: active
-branch: phase1-defaults
+branch: phase1-c3-validation-engine
 previous_tag: v0.29.0-phase0c3-baseline
 next_tag: v0.29.1-phase1-preflight
 goal: Transition from prototype-safe to production-safe defaults.
-last_action: P1·C2 wired CLI flag overrides into runtime config + metadata.
+last_action: P1·C3 added validation-engine labeling to CLI + reports.
 ci_status: green
 agent_mode: true
 docs_version: 2025-10-16
-next_checkpoint: 3
+next_checkpoint: 4
 checkpoints:
   - id: P1C1
     title: Disable demo fallbacks by default
@@ -20,8 +20,9 @@ checkpoints:
     risk: low
     status: complete
   - id: P1C3
-    title: Embed validation_engine metadata
+    title: Validation-engine labeling
     risk: low
+    status: complete
   - id: P1C4
     title: Dual-mode demo verification
     risk: medium
