--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,15 +1,15 @@
 phase: 1
-checkpoint: 3
+checkpoint: 4
 status: active
-branch: phase1-c3-validation-engine
+branch: phase1-c4-docs-refresh
 previous_tag: v0.29.0-phase0c3-baseline
 next_tag: v0.29.1-phase1-preflight
 goal: Transition from prototype-safe to production-safe defaults.
-last_action: P1·C3 added validation-engine labeling to CLI + reports.
+last_action: P1·C4 synced documentation updates and refreshed quickstart example.
 ci_status: green
 agent_mode: true
 docs_version: 2025-10-16
-next_checkpoint: 4
+next_checkpoint: 5
 checkpoints:
   - id: P1C1
     title: Disable demo fallbacks by default
@@ -24,8 +24,9 @@ checkpoints:
     risk: low
     status: complete
   - id: P1C4
-    title: Dual-mode demo verification
-    risk: medium
+    title: Docs sync + example refresh
+    risk: low
+    status: complete
   - id: P1C5
     title: Phase 1 preflight tag & docs sync
     risk: none
