P2C2: Delete redundant legacy modules (guarded)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,71 +1,4 @@
-# === NOVA AGENT ENTRYPOINT ================================================
-# This is the first file Agent Mode should read. It tells Agent where to look,
-# what checkpoint we’re on, and the exact task to run. Keep it short & canonical.
-# ==========================================================================
-
-project: CrapsSim-Control
-owner: Rey
-maintainer: Nova
-version_tag: v0.29.1-phase1-preflight
-
-# Canonical pointers (Agent MUST read these next)
-paths:
-  snapshot: docs/CSC_SNAPSHOT.yaml
-  checklist: docs/PHASE_CHECKLIST.md
-  bible: docs/CSC_BIBLE.md
-  workflow: docs/DEV_WORKFLOW.md
-
-phase:
-  phase: 2
-  checkpoint: 1
-  status: active
-  next_checkpoint: P2·C2
-repo_path: .
-docs_root: docs/
-snapshot: docs/CSC_SNAPSHOT.yaml
-bible: docs/CSC_BIBLE.md
-checklist: docs/PHASE_CHECKLIST.md
-workflow: docs/DEV_WORKFLOW.md
-branch: phase2-c1-file-moves
-previous_tag: v0.29.1-phase1-preflight
-next_tag: v0.29.2-phase2-baseline
-
-policy:
-  agent_runs_per_checkpoint: 1
-  allow_behavior_change: false     # Phase 2: structural renames only
-  require_tests_green: true
-  require_update_snapshot: true
-  require_bible_append: true
-
-intent:
-  summary: >
-    Rename runtime templates/legalize/rules modules to their canonical names,
-    add backward-compatible shims, and launch Phase 2 documentation with no
-    logic changes.
-  success_criteria:
-    - "templates_rt, legalize_rt, and rules_rt re-export canonical modules and raise DeprecationWarning"
-    - "Controller, CLI entry points, and tests import templates, legalize, and rules_engine directly"
-    - "pytest -q passes"
-    - "Importing legacy module names prints a single DeprecationWarning"
-    - "docs/PHASE_CHECKLIST.md, docs/CSC_BIBLE.md, docs/CSC_SNAPSHOT.yaml, and NOVA_AGENT_ENTRYPOINT.yaml reflect Phase 2 P2·C1"
-
-agent_tasks:
-  # High-level steps Agent should perform in order (mechanical only)
-  - rename_modules: "Move templates_rt.py → templates.py, rules_rt.py → rules_engine.py, legalize_rt.py → legalize.py"
-  - add_shims: "Leave *_rt.py files that warn and re-export the canonical modules"
-  - update_imports:
-      - crapssim_control/controller.py
-      - crapssim_control/__init__.py
-      - tests/
-  - update_docs:
-      - docs/PHASE_CHECKLIST.md
-      - docs/CSC_BIBLE.md
-      - docs/CSC_SNAPSHOT.yaml
-      - NOVA_AGENT_ENTRYPOINT.yaml
-  - run_tests: "pytest -q"
-  - commit: "P2C1: File moves and import shims (no logic changes)"
-
-notes:
-  - "No logic changes allowed—perform renames and shims only."
-  - "If imports fail or warnings do not emit, stop and report."
-  - "Ensure documentation and entrypoint pointers reflect Phase 2 status."
+current_phase: 2
+current_checkpoint: 2
+checkpoint_title: Delete Redundancies (Guarded)
+allow_behavior_change: false
