P2C3: Import hygiene and centralized deprecation registry

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 2
-current_checkpoint: 2
-checkpoint_title: Delete Redundancies (Guarded)
+current_checkpoint: 3
+checkpoint_title: Import Hygiene + Deprecation Log
 allow_behavior_change: false
