--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 2
-checkpoint: 2
-title: Delete Redundancies (Guarded)
-description: Legacy modules removed safely with regression test added; no runtime logic changes.
+checkpoint: 3
+title: Import Hygiene + Deprecation Log
+description: Centralized deprecation registry and full import hygiene sweep completed; no behavior changes.
 status: active
