P2C4: spec key normalization shim and deprecation logging (no behavior change)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 2
-current_checkpoint: 3
-checkpoint_title: Import Hygiene + Deprecation Log
+current_checkpoint: 4
+checkpoint_title: Spec Loader Shim (Key Normalization)
 allow_behavior_change: false
