P2C5: baseline artifacts and v0.30.0-phase2-baseline tag

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 2
-current_checkpoint: 4
-checkpoint_title: Spec Loader Shim (Key Normalization)
+current_checkpoint: 5
+checkpoint_title: Baseline & Tag
 allow_behavior_change: false
