P3C1: analytics module and hook scaffolding (no behavior change)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 2
-current_checkpoint: 5
-checkpoint_title: Baseline & Tag
+current_phase: 3
+current_checkpoint: 1
+checkpoint_title: Analytics Hook Scaffolding
 allow_behavior_change: false
