P3C2: bankroll and roll tracking integration (additive CSV columns behind embed_analytics)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 3
-current_checkpoint: 1
-checkpoint_title: Analytics Hook Scaffolding
+current_checkpoint: 2
+checkpoint_title: Bankroll & Roll Tracking Integration
 allow_behavior_change: false
