P3C3: summary expansion with bankroll/roll metrics and summary_schema_version "1.2"

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 3
-current_checkpoint: 2
-checkpoint_title: Bankroll & Roll Tracking Integration
+current_checkpoint: 3
+checkpoint_title: Summary Expansion
 allow_behavior_change: false
