--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 3
-checkpoint: 2
-title: Bankroll & Roll Tracking Integration
-description: Enabled live bankroll tracking and per-roll/hand context; added optional CSV fields gated by embed_analytics.
+checkpoint: 3
+title: Summary Expansion
+description: Report includes analytics summary fields and summary_schema_version "1.2"; no gameplay or CSV changes.
 status: active
