P3C4: add journal and summary schema versioning (v1.2)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 3
-current_checkpoint: 3
-checkpoint_title: Summary Expansion
+current_checkpoint: 4
+checkpoint_title: Journal Schema Versioning
 allow_behavior_change: false
