P3C5: capture seeded analytics baseline (v0.31.0-phase3-baseline)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 3
-current_checkpoint: 4
-checkpoint_title: Journal Schema Versioning
+current_checkpoint: 5
+checkpoint_title: Baseline & Tag
 allow_behavior_change: false
