P4C0: initialize Phase 4 documentation and checkpoint roadmap

--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
-phase: 3
-checkpoint: 5
-title: Baseline & Tag
-description: Phase 3 complete; analytics, schema versioning, and baselines verified.
-status: complete
+phase: 4
+checkpoint: 0
+title: Docs Kickoff & Roadmap Setup
+description: Initialize Phase 4 documentation and checkpoint roadmap; archive prior phase as complete.
+status: active
