--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 3
-current_checkpoint: 5
-checkpoint_title: Baseline & Tag
+current_phase: 4
+current_checkpoint: 0
+checkpoint_title: Docs Kickoff & Roadmap Setup
 allow_behavior_change: false
