--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 4
-current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Setup
+current_checkpoint: 1
+checkpoint_title: CLI Flag & Manifest Framework
 allow_behavior_change: false
