--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 4
-checkpoint: 0
-title: Docs Kickoff & Roadmap Setup
-description: Initialize Phase 4 documentation and checkpoint roadmap; archive prior phase as complete.
+checkpoint: 1
+title: CLI Flag & Manifest Framework
+description: Centralized CLI flag handling and added standardized run-manifest schema.
 status: active
