P4C2: add opt-in Node-RED/webhook outbound hooks with safe defaults and masking

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 4
-current_checkpoint: 1
-checkpoint_title: CLI Flag & Manifest Framework
+current_checkpoint: 2
+checkpoint_title: Node-RED / Webhook Stub Integration
 allow_behavior_change: false
