P4C3: polish report metadata, add run_id/manifest_path, engine/artifacts, and flag provenance; include run_id in webhook payloads

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 4
-current_checkpoint: 2
-checkpoint_title: Node-RED / Webhook Stub Integration
+current_checkpoint: 3
+checkpoint_title: Runtime Report & Metadata Polish
 allow_behavior_change: false
