--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 4
-current_checkpoint: 3
-checkpoint_title: Runtime Report & Metadata Polish
+current_checkpoint: 4
+checkpoint_title: Evo Integration Hooks (Scaffold)
 allow_behavior_change: false
