P4C5: capture seeded integration baseline and tag v0.32.0-phase4-baseline

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 4
-current_checkpoint: 4
-checkpoint_title: Evo Integration Hooks (Scaffold)
+current_checkpoint: 5
+checkpoint_title: Baseline & Tag
 allow_behavior_change: false
