--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,16 @@
-phase: 4
-checkpoint: 5
-title: Baseline & Tag
-description: Seeded integration baseline captured and release tag v0.32.0-phase4-baseline created.
-status: complete
+phase: 5
+title: CSC-Native Rules Engine (Internal Brain)
+description: Introduces deterministic rule-based strategy switching inside CSC.
+next_phases:
+  - phase: 6
+    title: Node-RED Driven Control (External Brain)
+    description: External orchestration via webhooks and command API using same action verbs.
+  - phase: 7
+    title: Web Dashboard MVP
+    description: Live run monitoring and artifact access; read-only.
+  - phase: 8
+    title: Run Launcher & Spec Library
+    description: /runs API and spec management from UI.
+  - phase: 9
+    title: Integrated Spec Builder & Chained Runs
+    description: Unified Node-RED builder with chained runs and comparisons.
