P5C2: implement action catalog and timing guards for rule execution

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,6 +1,6 @@
 current_phase: 5
-current_checkpoint: 1
-checkpoint_title: Rule Schema & Evaluator (Read-Only)
+current_checkpoint: 2
+checkpoint_title: Action Catalog & Timing Guards
 allow_behavior_change: true
 roadmap_version: dual-brain-v1
 notes: >
