P5C3: implement decision journal with cooldown and scope safeties

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,6 +1,6 @@
 current_phase: 5
-current_checkpoint: 2
-checkpoint_title: Action Catalog & Timing Guards
+current_checkpoint: 3
+checkpoint_title: Decision Journal & Safeties
 allow_behavior_change: true
 roadmap_version: dual-brain-v1
 notes: >
