P5C4: add rule builder macros and linting for spec authoring

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,6 +1,6 @@
 current_phase: 5
-current_checkpoint: 3
-checkpoint_title: Decision Journal & Safeties
+current_checkpoint: 4
+checkpoint_title: Spec Authoring Aids
 allow_behavior_change: true
 roadmap_version: dual-brain-v1
 notes: >
