--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,11 @@
-phase: 5
-checkpoint: 5
-title: Baseline & Tag
-description: Seeded integration run validating internal rule engine; tagged v0.34.0-phase5-ittt.
-status: complete
+phase: 6
+checkpoint: 0
+title: Node-RED Driven Control (External Brain)
+description: CSC exposes an external command interface so Node-RED can send validated actions. Phase 6 unifies internal and external decision logging, adds safety/backpressure, and ends with a reproducible baseline (v0.35.0-phase6-external).
+status: active
+checkpoints:
+  - P6·C1 — Inbound Command Channel
+  - P6·C2 — Node-RED Flow (Listen → Decide → Command)
+  - P6·C3 — Decision Journal Unification
+  - P6·C4 — Safety & Backpressure
+  - P6·C5 — Baseline & Tag (v0.35.0-phase6-external)
