P6C0: append Phase 6 to Bible, update snapshot/checklist/entrypoint for external brain kickoff

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 6
 current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Setup
+checkpoint_title: Docs Kickoff & Roadmap Setup (Phase 6)
 allow_behavior_change: true
