--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,6 @@
 current_phase: 6
-current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Setup (Phase 6)
+current_checkpoint: 1
+checkpoint_title: Inbound Command Channel
 allow_behavior_change: true
+notes: >
+  Bible is append-only: add new Phase 6 sections, do not overwrite prior phases.
