--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,11 +1,5 @@
 phase: 6
-checkpoint: 0
-title: Node-RED Driven Control (External Brain)
-description: CSC exposes an external command interface so Node-RED can send validated actions. Phase 6 unifies internal and external decision logging, adds safety/backpressure, and ends with a reproducible baseline (v0.35.0-phase6-external).
+checkpoint: 1
+title: Inbound Command Channel
+description: Introduced `/commands` endpoint and internal queue; external actions validated and applied at legal timing windows with journal entries.
 status: active
-checkpoints:
-  - P6·C1 — Inbound Command Channel
-  - P6·C2 — Node-RED Flow (Listen → Decide → Command)
-  - P6·C3 — Decision Journal Unification
-  - P6·C4 — Safety & Backpressure
-  - P6·C5 — Baseline & Tag (v0.35.0-phase6-external)
