--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "fastapi>=0.110",
   "uvicorn>=0.23",
   "httpx>=0.27",
+  "requests>=2.31",
 ]
 
 # Optional extras: YAML loading for specs
